new file:   public/Host/img/people.png 	new file:   public/Host/index.html 	new file:   public/Host/module.js 	new file:   public/Host/script.js 	new file:   public/Host/style.css 	modified:   public/Styles/style.css 	new file:   public/addAdmin/index.html 	new file:   public/addAdmin/module.js 	new file:   public/addAdmin/script.js 	new file:   public/addAdmin/style.css 	new file:   public/admin/README.md 	new file:   public/admin/img/people.png 	new file:   public/admin/index.html 	new file:   public/admin/module.js 	new file:   public/admin/script.js 	new file:   public/admin/style.css 	modified:   public/index.html 	new file:   public/insertForm/firebase.js 	new file:   public/insertForm/index.html 	new file:   public/insertForm/insertScript.js 	new file:   public/insertForm/script.js 	new file:   public/insertForm/scriptAdmin.js 	new file:   public/insertForm/style.css 	new file:   public/insertForm/styleAdminPanel.css 	modified:   public/menu/assets/js/module.js 	modified:   public/menu/assets/js/script.js 	modified:   public/menu/index.html 	new file:   public/message/index.html 	new file:   public/message/script.js 	new file:   public/message/style.css 	modified:   public/module.js 	new file:   public/settings/index.html 	new file:   public/settings/script.js 	new file:   public/settings/style.css

--- a/public/index.html
+++ b/public/index.html
@@ -72,10 +72,10 @@
                 </form>
             </div>
 
-            <form class="admin-actions" style="margin: 40px auto; max-width: 300px;">
+            <!-- <form class="admin-actions" style="margin: 40px auto; max-width: 300px;">
                 <input type="email" placeholder="User email" id="admin-email" required>
                 <button>Make Admin</button>
-            </form>
+            </form> -->
             
             <!-- Sign Up Form -->
             <div class="form signup_form">
@@ -105,13 +105,17 @@
                     <div class="login_signup">Already have an account? <a href="#" id="login">Login</a></div>
                 </form>
             </div>
+            
+
         </div>
         <div class="home_content">
             <h1>Car & Homestay Rental Experience</h1>
-            <p>With KJRent, you get access to a wide range of vehicles and <br>
+                <p>With KJRent, you get access to a wide range of vehicles and <br>
                 accommodations, tailored to your preferences and budget.</p>
-
-                <a href="#" class="btn">Explore</a>
+                <div class="exploreForm-container">
+                <i class="uil uil-times form_closeExplore"></i>
+            </div>
+                <a href="#" class="btn" id="open-form">Explore</a>
         </div>
 
         <div class="home_img">
